adding some new installations